fix scrollbar issues in code formatter

--- a/src/components/Formatter/Formatter.module.scss
+++ b/src/components/Formatter/Formatter.module.scss
@@ -18,6 +18,7 @@
 .editorRoot {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .languageSelectWrapper {
