--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -12,7 +12,7 @@
 .container {
   height: calc(100vh - 68px);
   background: white;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .searchBox {
